spacing fixes

--- a/stylesheets.css
+++ b/stylesheets.css
@@ -1,5 +1,7 @@
 .container{
-    margin-top: 0px;
+    margin: 0px;
+    padding: 0px;
+    width:100%;
 }
 
 #topMainImage{
